--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "big.js": "^6.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dom-renderer": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.1.0",
